fix: fixes ui not responsive on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  font-family: "Source Code Pro", monospace !important;
+  font-family: "Source Code Pro", "San Francisco", monospace !important;
 }
 
 body {
@@ -148,6 +148,40 @@ ul.ui.list li {
 
 .githubpinned__item-star {
   float: right !important;
+}
+
+@media only screen and (max-width: 767px) {
+  .ui.grid {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  .topheader {
+    padding: 25px !important;
+    padding-top: 50px !important;
+    text-align: center !important;
+  }
+  .topheader__header-name {
+    font-size: 28px !important;
+  }
+  .topheader__header-title {
+    font-size: 18px !important;
+    margin-top: 15px !important;
+    margin-bottom: 20px !important;
+  }
+  .topheader__column-right {
+    margin-top: -20px !important;
+  }
+  .homepage {
+    padding: 5px !important;
+  }
+  .middlebody__second-column {
+    margin-top: 15px !important;
+  }
+  .bottomfooter {
+    background-color: #dae3e7 !important;
+    color: black;
+    font-weight: 400;
+  }
 }
 
 i.icon {
